--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -70,7 +70,7 @@ Readings: TBD
 Lecture:
 
  * Slides: [html file](./slides/EDUC641_2_categ_2.html)
- * Data: 
+ * Data: [deathpenalty.csv](./data/deathpenalty.csv), [codebook](./data/deathpenalty.csv)
  * R Script: 
  
 Assignment 2: 
@@ -102,7 +102,7 @@ Readings: TBD
 
 Lecture slides: 
 
- * Slides:
+ * Slides: [html file](./slides/continuous_l1.html) \& [html file](./slides/continuous_l2.html)
  * Data:
  * R script:
 
@@ -114,7 +114,7 @@ Assignment 3:
 
 
 
-### Weeks 7 - 9
+### Weeks 8 - 10
 
 Topic: Describing relationships between continuous data
 
@@ -122,7 +122,7 @@ Readings: TBD
 
 Lecture slides: 
 
- * Slides:
+ * Slides: [html file](./slides/EDUC641_4_continuous_2.html)
  * Data:
  * R script:
 
@@ -130,24 +130,12 @@ Assignment 4:
 
  * Due TBD
  * [html file](./assignments/assignment04.html)
- * [cont.csv dataset (./data/cont.csv)
+ * [cont.csv](./data/cont.csv)
 
-
-### Weeks 9-10
-
-Topic: 
-
-Readings: TBD
-
-Lecture slides: 
-
- * Slides:
- * Data:
- * R script:
 
 Assignment 5: 
 
  * Due TBD
  * [html file](./assignments/assignment05.html)
- * [cont.csv dataset ()
+ * [ah.csv](./data/ah.csv)
 
