--- a/slides/EDUC641_2_categ_1.Rmd
+++ b/slides/EDUC641_2_categ_1.Rmd
@@ -126,6 +126,14 @@ df <- read.csv(here("data/deathpenalty.csv"))
 # Understanding data structure
 
 ```{r, echo=T}
+df
+```
+
+---
+# Understanding data structure
+
+```{r, echo=T}
+names(df)
 head(df)
 str(df)
 ```
