--- a/slides/EDUC641_2_categ_2.Rmd
+++ b/slides/EDUC641_2_categ_2.Rmd
@@ -333,12 +333,12 @@ Let's take a step back to capture the nature of the problem
 
 #### When you generalize from a sample back to its underlying population, you must be careful that your empirical study has not been the victim of *sampling idiosyncrasy*
 
-### Is the following scenario plausible?
+#### Is the following scenario plausible?
 - There really is no relationship between *DEATHPEN* and *RVICTIM* **in the population**
 - By accident, we have drawn an idiosyncratic sample from the population
 - This sampling idiosyncrasy ended up giving us a $\chi^2$ statistic as large as 103.8 by pure accident
 
-### How can we assess the plausibility of this scenario?
+#### How can we assess the plausibility of this scenario? 
 
 ---
 # The Null Hypothesis $(H_{0})$
@@ -376,13 +376,17 @@ ch + geom_vline(xintercept = 5, color = "blue", linetype = "dashed", size=1.5)
 # Testing the null
 
 In fact, this is the value of the $\chi^2$ statistic we observed:
-```{r, echo=F, fig.height=5.5}
+```{r, echo=F, fig.height=4.5}
 ggplot(chsq, aes(Chi_Square)) + geom_histogram(binwidth = 1) + geom_vline(xintercept = 103.8,  color = "red", size=1.5)
 ```
 
 --
 
 <span style="color:blue"> *This is a histogram of possible $\chi^2$ values that could result from sampling idiosyncrasy, and then the actual value of the $\chi^2$ statistic in our sample. What do you think?* </span>
+
+--
+
+*WOOHOO!* In this thought exercise, you've just engaged in a rudimentary version of <span style="color:red"> *Null-Hypothesis Significance Testing (NHST)* </span>; the bedrock of the majority of social science research.
 
 ---
 # Testing the null (*p*-values)
@@ -395,27 +399,119 @@ ggplot(chsq, aes(Chi_Square)) + geom_histogram(binwidth = 1) + geom_vline(xinter
 
 --
 
-The statistic that captures the likelihood that one would observe a $\chi^2$ statistic of a given magnitude in a particular sample, in the presence of a null population, is called the <span style="color:red">  **p-value** </span>
+The statistic that captures the likelihood that one would observe a $\chi^2$ statistic of a given magnitude in a particular sample, in the presence of a null population, is called the <span style="color:red">  *p*-value </span>
+
 
 ---
 # Testing the null (*p*-values)
 
 <span style="color:blue"> *At what p-value would you cease to believe that the value of the $\chi^2$ statistic in your own research was "big" (i.e., was unlikely to have occurred by accident)* </span>
-```{r, echo=F, fig.height=5.5}
-ggplot(chsq, aes(Chi_Square, ..density..)) + geom_density()
+```{r, echo=F, fig.height=5}
+ggplot(chsq, aes(x=Chi_Square)) + geom_density(fill="pink", alpha=0.2) +
+  scale_x_continuous("Chi-Square values", limits = c(0,10))
 ```
+
+---
+# Testing the null (*p*-values)
+
+<span style="color:blue"> *At what p-value would you cease to believe that the value of the $\chi^2$ statistic in your own research was "big" (i.e., was unlikely to have occurred by accident)* </span>
+```{r, echo=F, fig.height=5}
+chsq_right <- density(chsq$Chi_Square, from = 3.84, to = max(chsq$Chi_Square))
+chsq_data <- data.frame(x = chsq_right$x, y = chsq_right$y)
+ggplot(chsq, aes(x=Chi_Square)) + geom_density(fill="pink", alpha=0.2) +
+ geom_area(data = chsq_data, aes(x=x, y=y), fill = "blue", alpha=0.2) +
+  geom_vline(xintercept=3.84, color = "red", size = 0.5, linetype = "dashed") +
+  scale_x_continuous("Chi-Square values", limits = c(0,10)) +
+  scale_y_continuous("density")
+```
+
+--
+
+In social science research, it is customary to (arbitrarily) set that threshold at **5 percent (*p*<0.05)**. In other words, we say that if the difference between our observed data and our expected data would have happened in fewer than 1 out of 20 randomly drawn samples, that the difference reflects a true difference in the population.
+
+---
+# (Very) brief intro to probability
+
+**Two common ways to think about probability: the long-run view (frequentist) and priors (Bayesian)**
+
+- **Frequentist:**
+- With a known long-run outcome (e.g., a fair coin comes up heads half the time), we can consider the likelihood of a given short-run event
+ + A coin flipped twice will come up Heads both times with a probability of 0.25 (fairly likely); but a coin flipped 20 times will come up Heads every time with a probability of 0.000000095 (very unlikely)
+ + In the short-run, you can expect some variability, but in the long run, it will converge to the known distribution
+
+```{r, echo=F, fig.height=3.5}
+set.seed(12345)
+nsim = 2000
+X = matrix(NA, ncol=2, nrow=nsim)
+for(S in 1:nsim){
+  X[S,1] = S
+  X[S,2] = rbinom(n=1, size = S, prob = .5)/S
+}
+X = as.data.frame(X); names(X) = c("num", "coin")
+coin_true <- X %>% ggplot(aes(x = num, y= coin)) + geom_line() + geom_hline(aes(yintercept = .5), color = "red", linetype = 2) + scale_x_continuous("Number of tosses") + scale_y_continuous("Proportion of heads", breaks = seq(0, 1, .1), limits = c(0,1)) 
+coin_true
+```
+
+---
+# Probability and testing $H_{0}$
+
+We are asking how likely is it that we observe event X happening with Y frequency, if the expected probability of X happening is Z?
+
+<span style="color:blue"> *Imagine you were handed a coin and asked to determine whether it was weighted to one side. How certain would you be after 50 flips?* </span>
+
+```{r, echo=F, fig.height=3.5}
+nsim = 2000
+Y = matrix(NA, ncol=2, nrow=nsim)
+for(S in 1:nsim){
+  Y[S,1] = S
+  Y[S,2] = rbinom(n=1, size = S, prob = .6)/S
+}
+Y = as.data.frame(Y); names(Y) = c("num", "coin")
+filter(Y, num <=50) %>% ggplot(aes(x = num, y= coin)) + geom_line() + geom_hline(aes(yintercept = .5), color = "red", linetype = 2) + scale_x_continuous("Number of tosses") + scale_y_continuous("Proportion of heads", breaks = seq(0, 1, .1), limits = c(0,1)) 
+
+```
+
+---
+# Probability and testing $H_{0}$
+
+We are asking how likely is it that we observe event X happening with Y frequency, if the expected probability of X happening is Z?
+
+<span style="color:blue"> *Imagine you were handed a coin and asked to determine whether it was weighted to one side. How certain would you be after 200 flips?* </span>
+
+```{r, echo=F, fig.height=3.5}
+filter(Y, num <=200) %>% ggplot(aes(x = num, y= coin)) + geom_line() + geom_hline(aes(yintercept = .5), color = "red", linetype = 2) + scale_x_continuous("Number of tosses") + scale_y_continuous("Proportion of heads", breaks = seq(0, 1, .1), limits = c(0,1)) 
+
+```
+
+---
+# Probability and testing $H_{0}$
+
+We are asking how likely is it that we observe event X happening with Y frequency, if the expected probability of X happening is Z?
+
+<span style="color:blue"> *Imagine you were handed a coin and asked to determine whether it was weighted to one side. How certain would you be after 2000 flips?* </span>
+
+```{r, echo=F, fig.height=3.5}
+Y %>% ggplot(aes(x = num, y= coin)) + geom_line() + geom_hline(aes(yintercept = .5), color = "red", linetype = 2) + scale_x_continuous("Number of tosses", limits = c(0,2000)) + scale_y_continuous("Proportion of heads", breaks = seq(0, 1, .1), limits = c(0,1)) 
+
+```
+
+--
+
+<span style="color:red"> *But how do we know what the "expected" probability of X happening is????* </span>
+
+**In the next unit, we will answer this question**
 
 ---
 # Putting it all together
 
 ### Basic steps of classical statistical inference
-1. State a research question
+1. State a research question, including a null hypothesis $(H_{0})$ which states there exists no relationship between our variables of interest
 2. Display and describe the observed data
 3. Summarize the observed data in relationship to an expected value
-    + *We'll return to this more formally in the Continuous II unit to understand where these "expected" values come from*
-4. Estimate the *p*-value
-5. Reject or fail to reject the null hypothesis
-6. Interpret your findings drawing explicitly on plots, summary statistics and test statistics
+4. Set a threshold at which we will no longer believe that the discrepancy between the observed and expected relationship is due to sampling idiosyncrasy
+5. Estimate the *p*-value
+6. Reject or fail to reject the null hypothesis
+7. Interpret your findings drawing explicitly on plots, summary statistics and test statistics
 
 --
 
@@ -423,6 +519,89 @@ ggplot(chsq, aes(Chi_Square, ..density..)) + geom_density()
 > In the population of convicted murderers in Georgia, the imposition of the death penalty and the race of the victim are related ( $\chi^2$ = 103.8, *p*< 0.001) The percentage of convicted murderers who were sentenced to death after killing a White victim was more than 8 times the percentage of convicted to murderers who were sentenced to death after killing a Black victim. In Figure 1, we show...
 
 ---
+# Critiques of frequentist NHST
+
+### 1. Re-thinking concepts of "statistical significance"
+### 2. A different way of thinking about probability (Bayesian)
+
+---
+# Problems with "statistical significance"
+
+An explosion of [academic](https://www.tandfonline.com/toc/utas20/73/sup1?nav=tocList) and [popular press](https://www.nytimes.com/2015/08/28/science/many-social-science-findings-not-as-strong-as-claimed-study-says.html) attention to the "replication crisis" emerged in the early 2010s. 
+
+Aside from outright manufactured data, some problems include:
+- *p*<0.05 as a condition for publication and a goal for researchers
+ + $\rightarrow$ Publication bias: "successes" are published; "failures" end up in file drawers
+
+---
+# More problems
+
+If *p*<0.05 is the goal, there are many ways to get there:
+- If your goal is to find a "statistically significant" result, you will detect one 1 out of 20 times (on average)
+- This can be the product of intentional "*p*-hacking" or "researcher degrees of freedom" (explore your data, test many different models, try this variable, etc.)
+
+Novelty as a condition for publication in top-tier journals
+ + If something is "unexpected" or "surprising" there's a decent chance it might not be true
+ 
+- Weak theory: 
+ + Low-precision "differences" between groups, with little interesting in quantifying the differences
+ + No non-null hypotheses
+ + No prior belief about likelihood of findings
+ + Hypothesis After the Results are Known (HARK-ing)
+
+---
+# Problems with probability
+
+In frequentist statistics, we assume that the null hypothesis has as good a chance as any other hypothesis at being true, and we then test how likely we are to observe the data as we see them when the null is actually true...**but is this the right framework???**
+
+How believable are the following findings?
+- People who wear glasses are more likely to be empathetic $(p = 0.023)$
+- Medical doctors have fewer close relationships than those in other professions $(p = 0.007)$
+- People who engage in [power posing](https://www.nytimes.com/2017/10/18/magazine/when-the-revolution-came-for-amy-cuddy.html) experience increased testosterone $(p = 0.045)$ (*a real paper*)
+
+--
+
+Perhaps it is wiser to start with a *prior* belief about the probability of an event?
+
+---
+# Bayesian statistics
+
+In contrast to frequentist approaches, Bayesian probability takes into account one's prior beliefs in determining the probability of an event
+- Key insight: adjust current beliefs based on previous knowledge/beliefs
+ + Adjust prior belief towards evidence in observed data
+- Prior beliefs could come from theory, research or personal belief
+
+#### Bayes Theorem (don't need to know this):
+
+$$
+\large P(A|B) = \frac{P(B|A)\cdot P(A)}{P(B)}
+$$
+---
+# Bayesian Example
+I have a theory that Oregonians are (generally) outdoors-y. I meet an outdoors-y person. What is the probability I have met an Oregonian?
+
+$P(Oregonian) = 0.02$ (to make it simple 1 of 50 U.S. states) <br>
+$P(Outdoorsy | Oregonian) = 0.65$ <br>
+$P(Outdoorsy) = 0.20$
+
+$$
+\large P(Oregonian | Outdoorsy) = \frac{(0.65)(0.02)}{0.20} = 0.065
+$$
+--
+
+Not surprisingly, I've updated my beliefs and now think there is a greater-than-base-rate likelihood (over 3x) that this person is an Oregonian. But it also tells me not to be too excited and claim the probability is 0.65 that I've met an Oregonian just because they are outdoors-y.
+
+--
+
+- Inferential statisticians make statements like, "the chance we would observe differences between the treatment and control as large as the ones we did when there was actually no effect is less than 5%"
+- Bayesian statisticians make statements like, "the chance that the treatment is more effective than the control is 92%"
+
+--
+
+<span style="color:red"> *Much more complexity to be explored in another course*</red>
+
+---
+
 # Estimating the $\chi^2$ statistic in R
 
 ```{r, echo=T}
